--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
 </head>
 <body>
     <header>
-        <h1>ti4.io</h1>
-        <p>A companion app for TI4.</p>
+        <!-- <h1>ti4.io</h1> -->
     </header>
     <main>
-        <section>
+        <section class="strategies module">
+            <!-- <div class="module__head">
+                <h2>Strategy Cards</h2>
+            </div> -->
+            <div class="module__body flex-row">
+            </div>
         </section>
     </main>
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/global-functions.js"></script>
+    <script src="js/players.js"></script>
+    <script src="js/strategy-cards.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
